--- a/css/ProjectList.css
+++ b/css/ProjectList.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 620px) {
+@media only screen and (min-width: 1000px) {
     .project-list {
         width: 100%;
         display: grid;
@@ -13,29 +13,29 @@
 
 
 .project-item {
-    height: 300px;
+    height: auto;
     margin-bottom: 20px;
     width: 100%;
     cursor: pointer;
     position: relative;
     overflow: hidden;
 }
-@media only screen and (min-width: 620px) {
+@media only screen and (min-width: 1000px) {
     .project-item {
         margin: 0;
-        height: 100%;
+        height: auto;
         width: 100%;
     }
 }
 
 
-@media only screen and (min-width: 620px) {
+@media only screen and (min-width: 1000px) {
     .wide {
         grid-column-end: span 2;
     }
 }
 
-@media only screen and (min-width: 620px) {
+@media only screen and (min-width: 1000px) {
     .high {
         grid-row-end: span 2;
     }
@@ -44,7 +44,7 @@
 .project-item-image {
     background-size: cover;
     background-position: 50%;
-    width: 100%;
+    width:100%;
     height: 100%;
     background-size: cover;
     transition: all .2s;
@@ -67,14 +67,16 @@
     border: 2px solid black;
     justify-content: center;
     padding: 20px;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    max-width: 1500px;
 }
 
 .project-list-title {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 h1.project-list-title {
     font-size: 1.3em;
+    font-weight:bold;
 }
