--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -20,12 +20,13 @@ head{
 
 @media only screen and (min-width: 620px) {
     .main {
-        padding: 0 40px 40px 180px;
+        display: flex;
+        justify-content: center;
     }
 }
 
 @media only screen and (min-width: 620px){
-    .footer, .main{
+    .footer{
         max-width : 1200px;
         margin: 0 auto;
     }
@@ -64,13 +65,6 @@ head{
 
 
 
-@media only screen and (min-width: 620px) {
-    h1 {
-        margin-top: 0.67em;
-        margin-bottom: 60px;
-        line-height: 0.7em;
-    }
-}
 
 h1{
     font-size: 2.5em;
@@ -85,16 +79,7 @@ h1, h2, h3, h4, h5{
     text-align: left;
 }
 
-h1{
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    unicode-bidi: isolate;
-}
+
 .paragraph[data-v-3ffc0470] {
     max-width: 700px;
     margin-bottom: 20px;
@@ -154,6 +139,14 @@ strong {
     align-items: center;
 }
 
+@media only screen and (min-width: 620px) {
+    h1 {
+        margin-top: 0.67em;
+        margin-bottom: 60px;
+        line-height: 0.7em;
+    }
+}
+
 
 
 .contact-link img {
@@ -211,4 +204,21 @@ strong {
 .skill img {
     height: 40px;
     margin-right: 10px;
+}
+
+.photo {
+    text-align: center;
+}
+
+@media only screen and (min-width: 800px) {
+    .photo {
+        float: left;
+        padding: 10px;
+        padding-left: 200px;
+    }
+}
+
+.photo img{
+    width: 100%;
+    height: auto;
 }
